v3.7.1 - Jun 30, 2016
- Fixed PHP7 support for debian jessie

v3.7.0 - Jun 22, 2016
- PHP7 support for debian jessie
- Fixed Issue #729, #724

v3.6.2 - Jun 03, 2016
- Fix Issue #726,#723,#727
- Update Adminer to v4.2.5
- Check for already installed nginx package

v3.6.1 - May 20, 2016
- Fix HHVM Support on Ubuntu Xenial

v3.6.0 - May 16, 2016
- Add support for Ubuntu 16.04 LTS - Xenial.
- Updated Nginx to the latest stable version (1.10.1)
- Updated OpenSSL to v1.0.2g for HTTP/2 support
- Drop support for spdy module. Move existing spdy sites to http2.
- Drop support for ngx_pagespeed module.
- Drop support for Nginx Mainline builds.
- Fix Let's Encrypt Auto renew issue

v3.5.6 - May 5, 2016
- Patch for ImageMagick vulnerability CVE-2016–3714 - https://imagetragick.com/
- Minor Fix for letsencrypt

v3.5.5 - Apr 13, 2016
- WP-CLI support for wordpress v4.5, PR #701
- PR #686
- Fix #702
- Minor Fixes

v3.5.4 - Mar 15, 2016
- Fixed Vimbadmin installation issue
- PR #684
- Minor fixes

v3.5.3 - Feb 25, 2016
- Fixed #650
- Fixed #681

v3.5.2 - Feb 25, 2016
- Fixed PHP package dependency (Trusty)

v3.5.1 - Feb 25, 2016
- Fixed #680

v3.5.0 - Feb 24, 2016
- Added PHP 7.0 support for Ubuntu(Trusty)
- Dual support for PHP 5.6 + PHP 7.0
- Fixed minor issues

v3.4.1 - Jan 20, 2016
- Fixed and update ee stack install --nginx/--nginxmainline
- Fixed --letsencrypt minor issues
- Fixed #665 #659
- Fixed other minor bug

v3.4.0 - Jan 6, 2016
- Added Let's Encrypt support
   - ee site create example.com [--wp/..] --letsencrypt
   - ee site update example.com --letsencrypt=on/off/renew
   - Automatic renew of certs through cron
   - Mail notification added on certs renew
   - Alias command: --le
- Added HTTP/2 support
   - ee stack install/remove/purge --nginxmainline
- Check SSL cert status/expiry date in site info
   - ee site info example.com
- Update autocompletion and man page

v3.3.15 - Dec 9, 2015
- Upgrade wp-cli version to 0.21.1

v 3.3.14 - Nov 10, 2015