@@ -311,13 +311,7 @@ class EEDebugController(CementBaseController):
                 nc.savef('/etc/nginx/conf.d/upstream.conf')
 
                 # Enable xdebug
-                if (EEVariables.ee_platform_codename != 'jessie'):
-                    EEFileUtils.searchreplace(self, "/etc/php/7.0/mods-available/"
-                                              "xdebug.ini",
-                                              ";zend_extension",
-                                              "zend_extension")
-                else:
-                    EEFileUtils.searchreplace(self, "/etc/php/mods-available/"
+                EEFileUtils.searchreplace(self, "/etc/php/7.0/mods-available/"
                                               "xdebug.ini",
                                               ";zend_extension",
                                               "zend_extension")
@@ -356,13 +350,7 @@ class EEDebugController(CementBaseController):
                 nc.savef('/etc/nginx/conf.d/upstream.conf')
 
                 # Disable xdebug
-                if (EEVariables.ee_platform_codename != 'jessie'):
-                    EEFileUtils.searchreplace(self, "/etc/php/7.0/mods-available/"
-                                          "xdebug.ini",
-                                          "zend_extension",
-                                          ";zend_extension")
-                else:
-                    EEFileUtils.searchreplace(self, "/etc/php/mods-available/"
+                EEFileUtils.searchreplace(self, "/etc/php/7.0/mods-available/"
                                           "xdebug.ini",
                                           "zend_extension",
                                           ";zend_extension")
